[gd_scene load_steps=7 format=2]

[ext_resource path="res://Enemies/forceray/Enemy_forceray.gd" type="Script" id=1]
[ext_resource path="res://Enemies/forceray/AngelWing_D_150x100.png" type="Texture" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 11.9061
height = 30.5692

[sub_resource type="Curve" id=2]
bake_resolution = 8
_data = [ Vector2( 0, 0.0636363 ), 0.0, 0.0, 0, 0, Vector2( 0.497024, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.0636363 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0, 0.514754, 1 )
colors = PoolColorArray( 1, 0, 0, 1, 1, 0.867188, 0, 1, 1, 0, 0, 1 )

[sub_resource type="SegmentShape2D" id=4]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Rayship_left" type="Area2D" parent="." groups=[
"player_damager",
]]

[node name="Sprite" type="Sprite" parent="Rayship_left"]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Rayship_left"]
position = Vector2( 1.18921, -10.1083 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="Rayship_right" type="Area2D" parent="." groups=[
"player_damager",
]]

[node name="Sprite" type="Sprite" parent="Rayship_right"]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Rayship_right"]
position = Vector2( 1.18921, -10.1083 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="ray" type="Area2D" parent="." groups=[
"player_damager",
]]

[node name="Line2D" type="Line2D" parent="ray"]
points = PoolVector2Array( 0, 200, 73.1086, -39.5294, 112.486, -277.798 )
width = 30.0
width_curve = SubResource( 2 )
default_color = Color( 0.0352941, 0.184314, 0.92549, 1 )
gradient = SubResource( 3 )
antialiased = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="ray"]
shape = SubResource( 4 )

[node name="Tween" type="Tween" parent="."]

[connection signal="area_entered" from="Rayship_left" to="." method="_on_Rayship_left_area_entered"]
[connection signal="area_entered" from="Rayship_right" to="." method="_on_Rayship_right_area_entered"]
[connection signal="area_entered" from="ray" to="." method="_on_ray_area_entered"]
